# homepage

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  index.js  justfile  main.go  style.css
.github/workflows/: check.yml  images.yml
assets/: index.js
kustomize/base/: deployment.yaml  kustomization.yaml  service.yaml
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
static/: index.html  index.js  style.css
textures/: email.asciiart  linkedin.asciiart
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/textures/: blog.asciiart  octocat.asciiart
