[package]
name = "server"
version = "0.1.0"
authors = ["tommady <tommady@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.5.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
