[package]
name = "wasm"
version = "0.1.0"
authors = ["tommady <tommady@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wee_alloc = { version = "0.4.5" }
