[package]
name = "wasm"
version = "0.1.0"
authors = ["tommady <tommady@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
