[package]
name = "wasm"
version = "1.0.0"
authors = ["tommady <tommady@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", default-features = false, features = ["strict-macro"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
